CHANGELOG for smartmontools

$Id: CHANGELOG,v 1.65 2002/12/01 23:24:00 pjwilliams Exp $

Copyright (C) 2002 Bruce Allen <smartmontools-support@lists.sourceforge.net>

Home page of code is: http://smartmontools.sourceforge.net

This program is free software; you can redistribute it and/or modify it
under the terms of the GNU General Public License as published by the Free
Software Foundation; either version 2, or (at your option) any later
version.

You should have received a copy of the GNU General Public License (for
example COPYING); if not, write to the Free Software Foundation, Inc., 675
Mass Ave, Cambridge, MA 02139, USA.

This code was originally developed as a Senior Thesis by Michael Cornwell
at the Concurrent Systems Laboratory (now part of the Storage Systems
Research Center), Jack Baskin School of Engineering, University of
California, Santa Cruz. http://ssrc.soe.ucsc.edu/

Maintainers/Developers Key:
[BA} Bruce Allen            <smartmontools-support@lists.sourceforge.net>
[EB] Erik Inge Bolso        <knan@mo.himolde.no>
[SB] Stanislav Brabec       <sbrabec@suse.cz>
[PC] Peter Cassidy          <pcassidy@mac.com>
[FM] Frederic L. W. Meunier <0@pervalidus.net>
[PW] Phil Williams          <phil@subbacultcha.demon.co.uk>

NOTES FOR FUTURE RELEASES: see TODO file.

CURRENT RELEASE (see VERSION file in this directory):

  [PW] Added list of proposed new options for smartctl to README.

  [PW] smartd: ParseOpts() now uses getopt_long() if HAVE_GETOPT_LONG is
  defined and uses getopt() otherwise.  This is controlled by CPPFLAGS in
  the Makefile.

  [BA] smartd: Fixed a couple of error messages done with perror()
  to redirect them as needed.

smartmontools-5.0.48

  [BA] smartctl: The -O option to enable an Immediate off-line test
  did not print out the correct time that the test would take to
  complete.  This is because the test timer is volatile and not
  fixed.  This has been fixed, and the smartctl.8 man page has been